--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -5,7 +5,7 @@ repositories {
     mavenCentral()
 }
 
-dependencies{
+dependencies {
     compile 'org.testng:testng:6.14.3'
     compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
@@ -14,3 +14,14 @@ dependencies{
     compile 'com.google.code.gson:gson:2.8.5'
 }
 
+task testGroups(type: Test) {
+    useTestNG() {
+        suites 'src/test/resources/testng-groups.xml'
+    }
+}
+
+task testContacts(type: Test) {
+    useTestNG() {
+        suites 'src/test/resources/testng-contacts.xml'
+    }
+}
