--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.5'
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'mysql:mysql-connector-java:8.0.13'
+    compile 'org.hibernate:hibernate-core:5.3.7.Final'
 }
 
 task testGroups(type: Test) {
