--- a/mantis-tests/src/main/resources/local.properties
+++ b/mantis-tests/src/main/resources/local.properties
@@ -1,6 +1,6 @@
 web.baseUrl = http://localhost/mantisbt-1.2.19/
 web.adminLogin = administrator
-web.adminPassword = secret
+web.adminPassword = root
 
 ftp.host = localhost
 ftp.login = mantis
@@ -10,3 +10,5 @@ mailserver.host = localhost
 mailserver.port = 4555
 mailserver.adminlogin = root
 mailserver.adminpassword = root
+
+db.url = jdbc:mysql://localhost/bugtracker?user=root&password=&serverTimezone=UTC
