--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile 'org.subethamail:subethasmtp:3.1.7'
     compile 'ru.lanwen.verbalregex:java-verbal-expressions:1.6'
     compile 'ch.qos.logback:logback-classic:1.2.3'
+    compile 'mysql:mysql-connector-java:8.0.12'
 }
 
 test {
