--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -6,7 +6,10 @@ repositories {
     mavenCentral()
 }
 
-dependencies{
+dependencies {
     compile 'org.testng:testng:6.14.3'
+}
+test {
+    useTestNG()
 }
 
